--- a/style.css
+++ b/style.css
@@ -969,10 +969,15 @@ nav a:first-child {
     box-sizing: border-box;
     margin-bottom: 1.2rem;
   }
+  .contatos-box .field-box {
+    grid-template-columns: 1fr !important;
+    gap: 1rem;
+  }
   .contatos-box .field-box input,
   .contatos-box .field-box textarea {
     width: 100%;
     box-sizing: border-box;
+    font-size: 1.3rem;
   }
   .resume-container {
     display: flex;
