--- a/style.css
+++ b/style.css
@@ -53,6 +53,10 @@ section.active {
     }
 }
 
+section.home {
+  padding-top: 3rem !important;
+}
+
 .home {
     display: flex;
     align-items: center;
@@ -938,6 +942,12 @@ nav a:first-child {
 }
 
 @media (max-width: 700px) {
+  .home-detail h2 {
+    font-size: 2.1rem;
+  }
+  .home-detail h1 {
+    font-size: 2.5rem;
+  }
   .contatos-container {
     display: flex;
     flex-direction: column;
