--- a/style.css
+++ b/style.css
@@ -955,6 +955,9 @@ nav a:first-child {
     display: block;
     text-align: left;
   }
+  .resume-detail.certificados .resume-item .year {
+    font-size: 1.1rem;
+  }
 }
 
 @media (max-width: 700px) {
